Fix Courant's number mistake

--- a/1d-wave-strings/latex/main.tex
+++ b/1d-wave-strings/latex/main.tex
@@ -157,7 +157,7 @@ Start with the 1D wave equation (Equation \ref{eq:1d-wave}) and replace both sid
 
 \noindent\\Here, $C$ is Courant's number:
 \begin{equation}
-    C=c\frac{\Delta x}{\Delta t}
+    C=c\frac{\Delta t}{\Delta x}
 \end{equation}
 
 \noindent\\The "problem" with Equation \ref{eq:cfdm} is that we do not have $u_i^{n-1}$. Therefore, we use Equation \ref{eq:icd-sub} to substitute $u_i^{n-1}$ with $u_i^{n+1}$, do some simple algebra, and get Equation \ref{eq:firstfunc}:
